<resources>
    <string name="app_name" translatable="false">ChatApp</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_friends">Friends</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="remember_me">remember me</string>
    <string name="write_a_message">Write a message</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log out</string>
    <string name="save">save</string>
    <string name="log_in_fragment">Log In</string>
    <string name="signup_fragment">Signup</string>
    <string name="chats_fragment">Chats</string>
    <string name="friends_fragment">Friends</string>
    <string name="profile_fragment">Profile</string>
    <string name="settings_fragment">Settings</string>
    <string name="chat_fragment">Chat</string>
</resources>